# ChangeLog for dev-java/wagon-http-lightweight
# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: $



  18 Apr 2007; kiorky <kiorky@cryptelium.net> ChangeLog:
  Added as a maven dependency
