@@ -1,4 +1,4 @@
 DIST wagon-http-lightweight-1.0.tar.bz2 6625 RMD160 d47a5fa18ed5b71eb880f2f269eade1420ba6b13 SHA1 c3bd11ec918fa751f3f3083f34115a2f52f3fe41 SHA256 a4774f68773b47c90174c3c40983c5f867521d3d8957336dcac0e26125234d13
-EBUILD wagon-http-lightweight-1.0.ebuild 845 RMD160 f5c52202fdcddf0d4cf0797567a1bd4153c77866 SHA1 66350ba678cebb65497dd53b8ab83cf43bf13e87 SHA256 15d85ccd0b3078fdbc4d650b47478c19bbc442ac39a21203cf480f91fe286734
-MISC ChangeLog 222 RMD160 f53e7011720ee412931b20653cc2c6638b888c03 SHA1 2a143ba26c44f19237618dad9fd6f5d93713e8fe SHA256 251855ea9cff767dc0c2be00f7959793c4abd4d87120bdaf4bb8783ffccc24ea
+EBUILD wagon-http-lightweight-1.0.ebuild 789 RMD160 71cdefb43eef157554ef128687cfc11c1cbac0de SHA1 364c4c55b5b5dd635bf1cff3ebd146205e3b2d69 SHA256 94ea65e6a6ca452acb8a7dfe5a6153907c4c9c45234cad8ba8c0b924cd51afda
+MISC ChangeLog 336 RMD160 65a875d4ec033dca2eb82fca2d58a5fc73a2887c SHA1 28515e12dbdda7bf2ea57194704362274e99fbb1 SHA256 0e133b4b6684daf6429d04dc6ba9c2ffce22d89bd21a801a6afd93d4337b9c0f
 MISC metadata.xml 157 RMD160 ab0b3741457dee7531f59c4da0f0e9e8399af084 SHA1 c37a6b9922aef61b5b3387655bccb6e3b16e0e26 SHA256 295d02c5805b0257938eb80314b371daac94b8d6ea85629a902de7a824adc0c9
